@@ -16,12 +16,10 @@ void
 testTortureExecute (void)
 {
 #if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
-#if !((defined __SDCC_stm8) && defined (__SDCC_MODEL_LARGE)) // Assembler not suitable for 24-bit function pointers
   fp = f;
   if (fp ((float) 1) != 1.0)
     ASSERT (0);
   return;
-#endif
 #endif
 }
 
